force-app/main/default/objects/custom_create330__c/custom_create330__c.object-meta.xml
<CustomObject>
    <label>Custom created object330</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects330</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>