force-app/main/default/objects/custom_create330__c/fields/custom_create_330field553__c.field-meta.xml
<CustomField>
    <fullName>custom_create_330field553__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 330field553</label>
    <type>Checkbox</type>
</CustomField>